<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".MainActivity">
    <!--Formula-->
    <TextView
        android:id="@+id/tvFormula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="end"
        android:textColor="@color/softPurple"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="20dp"
        tools:text="formula" />

    <!--Result-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvResult"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="end"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="50sp"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/tvFormula"/>

    <!--ButtonLayout-->
    <GridLayout
        android:id="@+id/layoutMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="40dp"
        android:columnCount="4"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResult"
        >

        <!--Buttons-->
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/clear"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="2"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/softPurple"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/_c"
            android:textSize="30sp"
            app:cornerRadius="15dp">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/plus"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/softPurple"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/_plus"
            android:textSize="30sp"
            app:cornerRadius="15dp">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/divide"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/softPurple"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/_divide"
            android:textSize="30sp"
            app:cornerRadius="15dp">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/numberSeven"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/_7"
            android:textSize="30sp"
            app:cornerRadius="15dp">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/numberEight"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/_8"
            android:textSize="30sp"
            app:cornerRadius="15dp">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/numberNine"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/_9"
            android:textSize="30sp"
            app:cornerRadius="15dp">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/multiply"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/softPurple"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/_multiply"
            android:textSize="30sp"
            app:cornerRadius="15dp">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/numberFour"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/_4"
            android:textSize="30sp"
            app:cornerRadius="15dp">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/numberFive"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/_5"
            android:textSize="30sp"
            app:cornerRadius="15dp">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/numberSix"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/_6"
            android:textSize="30sp"
            app:cornerRadius="15dp">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/mines"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/softPurple"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/_mines"
            android:textSize="30sp"
            app:cornerRadius="15dp">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/numberOne"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/_1"
            android:textSize="30sp"
            app:cornerRadius="15dp">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/numberTwo"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/_2"
            android:textSize="30sp"
            app:cornerRadius="15dp">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/numberThree"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/_3"
            android:textSize="30sp"
            app:cornerRadius="15dp">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/equal"
            android:layout_rowWeight="2"
            android:layout_rowSpan="2"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/softPurple"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/_equal"
            android:textSize="30sp"
            app:cornerRadius="15dp">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/numberZero"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/_0"
            android:textSize="30sp"
            app:cornerRadius="15dp"
            tools:ignore="DuplicateSpeakableTextCheck">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/dot"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/_dot"
            android:textSize="30sp"
            app:cornerRadius="15dp">
        </com.google.android.material.button.MaterialButton>
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>